# remarkivision

./: README.md  README.rst  pyproject.toml
data/checklist/: checklist1_ocr_raw.txt  checklist1_tmp.txt  checklist2_ocr_golden.txt  checklist2_ocr_raw.txt  test.txt
remarkivision/: __init__.py  checklist.py
tests/: test_remarkivision.py
