[tool.poetry]
name = "remarkivision"
version = "0.1.0"
description = ""
authors = ["Luis Piloto <luis.r.piloto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytesseract = "^0.3.8"
opencv-python = "4.4.0.40"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
